--- a/frontend.css
+++ b/frontend.css
@@ -1,22 +1,15 @@
-#wrapper{
-    position: relative;
-    width: 200px;
-    height: 200px;
+body {
+	background: #202020;
 }
 
-.content{
-    color: #FFFFFF;
-    font-size: 26px;
-    font-weight: bold;
-    text-shadow: -1px -1px 1px #000, 1px 1px 1px #000;
-    position: relative;
-    z-index: 100;
-}
-
-.background{
-    color: #191919;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -100;
+.CentreObject{
+	position: relative;
+	top:50%;
+	left: 50%;
+	-webkit-transform: translateX(-50%);
+	-ms-transform: translateX(-50%);
+	transform: translateX(-50%);
+	-webkit-transform: translateY(50%);
+	-ms-transform: translateY(50%);
+	transform: translateY(50%);
 }
