--- a/frontend.css
+++ b/frontend.css
@@ -1,15 +1,22 @@
-body {
-	background: #202020;
+html, body {
+  margin:0px;
 }
 
+body {
+}
+
+.BackHolder{
+	position:absolute;
+	top:0px;
+	right:0px;
+	bottom:0px;
+	left:0px;
+	background: #202020;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height:100vh;
+}
 .CentreObject{
-	position: relative;
-	top:50%;
-	left: 50%;
-	-webkit-transform: translateX(-50%);
-	-ms-transform: translateX(-50%);
-	transform: translateX(-50%);
-	-webkit-transform: translateY(50%);
-	-ms-transform: translateY(50%);
-	transform: translateY(50%);
+	
 }
