--- a/frontend.css
+++ b/frontend.css
@@ -5,18 +5,42 @@ html, body {
 body {
 }
 
-.BackHolder{
+.backHolder{
 	position:absolute;
 	top:0px;
 	right:0px;
 	bottom:0px;
 	left:0px;
-	background: #202020;
+	  /*Fallback if gradeints don't work */
+	  background: #202020;
+	  /*Linear gradient... */
+	  background: 
+		radial-gradient(
+		 at center, #252525, #202020
+		);
+	
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	height:100vh;
 }
 .CentreObject{
+	order:1;
+}
+.navBar{
+	margin: 3vh 0 0 0;
+	order:2;
+	border: 5px #000;
+	height: 10vh;
+	top:0px;
+	right:0px;
+	bottom:0px;
+	left:0px;
+	width: 25%;
 	
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	align-items: center;
 }
