--- a/frontend.css
+++ b/frontend.css
@@ -29,7 +29,7 @@ body {
 	order:1;
 }
 .navBar{
-	margin: 3vh 0 0 0;
+	margin: 10vh 0 0 0;
 	order:2;
 	border: 5px #000;
 	height: 10vh;
@@ -37,7 +37,7 @@ body {
 	right:0px;
 	bottom:0px;
 	left:0px;
-	width: 25%;
+	width: 15vw;
 	
 	display: flex;
 	flex-direction: row;
